--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 					<h2>Catergories</h2>
 
-							<p><a href="APH/index.html">American political history</a></p>
+							<p><a href="index2.html">American political history</a></p>
 
 							<p><a href="USD/index.html">Urban and suburban development</a></p>
 
