--- a/index2.html
+++ b/index2.html
@@ -131,7 +131,7 @@
 
                             <div class="content">
 
-                                <p class="box-content">Democrats have become more liberal in recent years. The share of Democrats who describe their political views as liberal has increased over the past 15 years. In surveys conducted this year, 41% of Democrats describe themselves as liberal, 35% say they are moderates and 21% say they’re conservative. In 2000, 43% were moderate, 27% liberal and 24% conservative.</p>
+                                <p class="box-content">The Republican Party began at a protest meeting in Ripon, Wisconsin, on 28 February 1854 as a group of antislavery activists, known as Free Soilers, met to start a new grassroots movement. The first party convention took place in Jackson, Michigan, that same year on 6 July. The group adopted the name of the political party of Thomas Jefferson, which later evolved more directly into the Democratic Party. The Republican Party emerged directly out of the Free Soil Party in the North, a movement embraced at various times by such Democrats as Martin Van Buren, who ran unsuccessfully for the presidency on the Free Soil Party ticket in 1848, and David Wilmot, a member of the U.S. House of Representatives (1845–1851).</p>
 
                             </div>
 
