--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
 
     <header>
 
-        <a href="Vigilant/index.html">Home</a>
+        <a href="index.html">Home</a>
 
         <div class="container">
 
