--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 							<p><a href="index2.html">American political history</a></p>
 
-							<p><a href="USD/index.html">Urban and suburban development</a></p>
+							<p><a href="index3.html">Urban and suburban development</a></p>
 
 							<p><a href="RA/index.html">Regional architecture</a></p>
 
