--- a/index2.html
+++ b/index2.html
@@ -119,6 +119,22 @@
 
                             <div class="content">
 
+                                <p class="box-content">.</p>
+
+                            </div>
+
+                        </div>
+                        
+                        <div class="col-sm-4 text-center">
+
+                            <div class="box-head">
+
+                                <h1></h1>
+
+                            </div>
+
+                            <div class="content">
+
                                 <p class="box-content"></p>
 
                             </div>
