--- a/index2.html
+++ b/index2.html
@@ -5,12 +5,6 @@
 
 <meta charset="utf-8">
 
-<meta name='description' content='Pranjal Ranka | Design Portfolio'>
-
-<meta name='keywords' content='Debra Ranka, Product Designer, Product Design Portfolio'>
-
-<meta name='author' content='Debra'>
-
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 <title>Vigilant Info</title>
@@ -119,7 +113,7 @@
 
                             <div class="content">
 
-                                <p class="box-content">.</p>
+                                <p class="box-content"></p>
 
                             </div>
 
