--- a/index3.html
+++ b/index3.html
@@ -109,7 +109,7 @@
 
                             <div class="content">
 
-                                <p class="box-content"></p>
+                                <p class="box-content">A suburb is a mixed-use or residential area, existing either as part of a city or urban area or as a separate residential community within commuting distance of a city.[1] In most English-speaking countries, suburban areas are defined in contrast to central or inner-city areas, but in Australian English and South African English, suburb has become largely synonymous with what is called a "neighborhood" in other countries and the term extends to inner-city areas.</p>
 
                             </div>
 
