--- a/index3.html
+++ b/index3.html
@@ -5,12 +5,6 @@
 
 <meta charset="utf-8">
 
-<meta name='description' content='Pranjal Ranka | Design Portfolio'>
-
-<meta name='keywords' content='Debra Ranka, Product Designer, Product Design Portfolio'>
-
-<meta name='author' content='Debra'>
-
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 <title>Vigilant Info</title>
@@ -110,6 +104,28 @@
                             <div class="content">
 
                                 <p class="box-content">A suburb is a mixed-use or residential area, existing either as part of a city or urban area or as a separate residential community within commuting distance of a city.[1] In most English-speaking countries, suburban areas are defined in contrast to central or inner-city areas, but in Australian English and South African English, suburb has become largely synonymous with what is called a "neighborhood" in other countries and the term extends to inner-city areas.</p>
+
+                            </div>
+
+                        </div>
+                        
+                        <div class="col-sm-4 text-center">
+
+                            <div class="box-head">
+
+                                <h1></h1>
+
+                            </div>
+
+                            <div class="box-sub">
+
+                                <h2></h2>
+
+                            </div>
+
+                            <div class="content">
+
+                                <p class="box-content"></p>
 
                             </div>
 
