--- a/index2.html
+++ b/index2.html
@@ -92,6 +92,8 @@
                             <div class="box-head">
 
                                 <h1> The Democratic Party</h1>
+                                
+                                <h2>Quick Facts</div> 
 
                             </div>
 
@@ -124,6 +126,8 @@
                             <div class="box-head">
 
                                 <h1> The Republican Party</h1>
+                                
+                                <h2>Quick Facts</div> 
 
                             </div>
 
