--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <meta charset="utf-8">
-
-    <meta name='description' content='Pranjal Ranka | Design Portfolio'>
-
-    <meta name='keywords' content='Debra Ranka, Product Designer, Product Design Portfolio'>
-
-    <meta name='author' content='Debra'>
+    <meta charset="utf-8">    
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -78,15 +72,15 @@
 
 							<p><a href="index3.html">Urban and suburban development</a></p>
 
-							<p><a href="RA/index.html">Regional architecture</a></p>
+							<p><a href="index4.html">Regional architecture</a></p>
 
-							<p><a href="FF/index.html">Finge film</a></p>
+							<p><a href="index5.html"></a></p>
 
-							<p><a href="CM/index.html">20th century music</a></p>
+							<p><a href="index6.html"></a></p>
 
-							<p><a href="ITD/index.html">20th century industrial and technological developments</a></p>
+							<p><a href="index7.html"></a></p>
 
-							<p><a href="MD/index.html">20th century medical discoveries.</a></p>
+							<p><a href="index8.html"></a></p>
 				</div>
 
 			</div>
