--- a/index4.html
+++ b/index4.html
@@ -21,7 +21,7 @@
 
     <header>
 
-        <a href="Vigilant/index.html">Home</a>
+        <a href="index.html">Home</a>
 
         <div class="container">
 
